<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="add_workout">I worked out!</string>
    <string name="did_not_workout">Use a free pass!</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="sign_up">Sign up!</string>
    <string name="create_group">Create a group</string>
    <string name="add_user">Add user!</string>
    <string name='done_adding_users'>Done adding users!</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
